# idris-lsp

./: .gitignore  idris-lsp.cabal
src/: IdrisLsp.hs
src/IdrisLsp/: Command.hs  IdeMode.hs  Message.hs
